Fix alignment in call to action box

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     display: block;
 }
 
-}
+
 img {
     border-radius: 8px;
 }
@@ -85,6 +85,7 @@ ul {
     height: auto;
     border: #3882F6 solid 6px;
     flex: 0 0 auto;
+    border-radius: 8px;
 }
 
 .testimonial-container {
@@ -96,7 +97,7 @@ ul {
     font-weight: lighter;
     padding: 64px 0px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
    
 }
 
@@ -136,17 +137,22 @@ ul {
     gap: 48px;
     flex: 1 1 auto;
     padding: 0px 96px;
+    justify-content: center;
+    align-items: center;
+  
  
 }
 
 .call-to-action-box .button {
     border-radius: 8px;
     width: 128px;
+    height:fit-content;
     background-color: #3882F6;
     border: solid white 3px;
     padding: 8px;
-    margin: auto;
+    flex: 0 0 auto;
     text-align: center;
+    
     
 }
 
